--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/learn-co-curriculum/phase-0-css-intro-lab.git"
   },
   "author": "flatironschool",
-  "license": "Included in Repo",
+  "license": "Learn.co Educational Content License",
   "bugs": {
     "url": "https://github.com/learn-co-curriculum/phase-0-css-intro-lab/issues"
   },
@@ -24,6 +24,6 @@
     "global-jsdom": "^8.3.0",
     "jsdom": "^18.1.0",
     "mocha": "^9.2.2",
-    "mocha-multi": "^1.1.5"
+    "mocha-multi": "^1.1.7"
   }
 }
